--- a/index copy.html
+++ b/index copy.html
@@ -107,10 +107,10 @@
 				<div class="container">
 					<div class="row">					 
 						<div class="caption-data" style="margin-top: 0px; opacity: 1;" data-animation-effect="fadeIn">
-								<h1>Ecommerce Solution for Local Stores</h1>
-								<h3 class="padding-top30">We are Ecommerce specialists to support local businesses.<br/> Tell us your challenges and we will solve together.</h3>
+								<h1>Ecommerce Support for Local Stores</h1>
+								<h3 class="padding-top30">We make softwares to increase your online sales.<br/> Tell us what you need</h3>
 								<div class="padding-top60 contact-form">
-									<button class="btn cta-button">CONTACT US</button>
+									<button class="btn cta-button">CLICK HERE</button>
 								</div>
 							</div>
 					</div>
@@ -118,7 +118,21 @@
 			</div>
 		</div>
 		<!-- banner end -->
-		
+		<section class="hero-caption secPadding">
+
+		<div class="container">
+	
+	<div class="row " style="margin-top: 0px;">
+				<div class="col-sm-12">
+	<h2>welcome to <strong>AVENGER</strong> - <span>Awesome</span> Multipurpose Template</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aperiam consequatur quo. Sed quis tortor magna. Maecenas hendrerit feugiat pulvinar. Aenean condimentum quam eu ultricies cursus.  Nulla facilisi. In hac habitasse platea dictumst. Ut nec tellus neque. Sed non dui eget arcu elementum facilisis.</p>
+ 	</div>
+	
+			</div>
+
+		</div>
+	
+</section>
 <!-- section start --> 
 		<section class="section transprant-bg pclear secPadding">
 			<div class="container no-view" data-animation-effect="fadeIn">
