Changed header title

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 							<!-- name-and-slogan -->
 							<div class="logo-section smooth-scroll">
-								<div class="brand"><a href="#banner">Avenger</a></div>								
+								<div class="brand"><a href="#banner">Linc AI</a></div>								
 							</div>
 
 						</div>
@@ -107,8 +107,9 @@
 				<div class="container">
 					<div class="row">					 
 						<div class="caption-data" style="margin-top: 0px; opacity: 1;" data-animation-effect="fadeIn">
-								<h1>Ecommerce Solution for Local Stores</h1>
-								<h3 class="padding-top30">We are Ecommerce specialists to support local businesses.<br/> Tell us your challenges and we will solve together.</h3>
+								<h2>Ecommerce Solution for Local Stores</h2>
+								<h3 class="padding-top30">We help local businesses to succeed in Ecommerce.
+									<br/> Tell us your challenges and we will help you through, effective and affordable.</h3>
 								<div class="padding-top60 contact-form">
 									<button class="btn cta-button">CONTACT US</button>
 								</div>
@@ -131,9 +132,9 @@
 								<i class="fa fa-trophy"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">User Research</h3>
+								<h3 class="media-heading">Strategy</h3>
 								<blockquote>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aperiam consequatur quo.</p>
+									<p>Get the maximum potential out of your webshop by researching customer flows and strengthening selling points.</p>
 									
 								</blockquote>
 							</div>
