--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="images/favicon.ico">
+		<link rel="shortcut icon" href="images/logo_icon.ico">
  
 		<link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
 		<link href="fonts/font-awesome/css/font-awesome.css" rel="stylesheet"> 
@@ -107,9 +107,9 @@
 				<div class="container">
 					<div class="row">					 
 						<div class="caption-data" style="margin-top: 0px; opacity: 1;" data-animation-effect="fadeIn">
-								<h2>Ecommerce Solution for Local Stores</h2>
-								<h3 class="padding-top30">We help local businesses to succeed in Ecommerce.
-									<br/> Tell us your challenges and we will help you through, effective and affordable.</h3>
+								<h1>AI for Retail</h1>
+								<h3 class="padding-top30">Transform your Retail business with data.
+									<br/> Our ambition is to empower local to global businesses with AI and Machine Learning.</h3>
 								<div class="padding-top60 contact-form">
 									<button class="btn cta-button">CONTACT US</button>
 								</div>
@@ -1041,7 +1041,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<p class="text-center">Copyright © 2015 Template by <a target="_blank" href="http://webthemez.com">webthemez.com</a>.</p>
+							<p class="text-center">Copyright © 2022 by Linc AI</a>.</p>
 						</div>
 					</div>
 				</div>
