--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 							<!-- name-and-slogan -->
 							<div class="logo-section smooth-scroll">
-								<div class="brand"><a href="#banner">Linc AI</a></div>								
+								<div class="brand"><a href="#banner">Linc AI<br>AI for all</a></div>								
 							</div>
 
 						</div>
@@ -107,8 +107,8 @@
 				<div class="container">
 					<div class="row">					 
 						<div class="caption-data" style="margin-top: 0px; opacity: 1;" data-animation-effect="fadeIn">
-								<h1>AI for Retail</h1>
-								<h3 class="padding-top30">Transform your Retail business with data.
+								<h1>AI for all</h1>
+								<h3 class="padding-top30">Transform your business with data.
 									<br/> Our ambition is to empower local to global businesses with AI and Machine Learning.</h3>
 								<div class="padding-top60 contact-form">
 									<button class="btn cta-button">CONTACT US</button>
