Made a mail to link

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 							<div class="widget-content">
 
 								<p>Questions? Comments? Please don't hesitate to reach out. </p><br/>
-								<p class="contacts"><i class="fa fa-envelope"></i> contact.linc.ai@gmail.com</p>
+								<p class="contacts"><i class="fa fa-envelope"></i> <a href="mailto: contact.linc.ai@gmail.com">contact.linc.ai@gmail.com</a> </p>
 
 							</div>
 					</div>
