Added About section

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 												<li><a href="#services">Services</a></li>
 												<li><a href="#about">About</a></li>
 												
-												<li><a href="#portfolio">Portfolio</a></li>
-												<li><a href="#price">Price</a></li>
+												<!-- <li><a href="#portfolio">Portfolio</a></li> -->
+												<!-- <li><a href="#price">Price</a></li> -->
 												<li><a href="#contact">Contact</a></li>
 											</ul>
 										</div>
@@ -206,9 +206,9 @@
 								<i class="fa fa-magic"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">AI for Customer Service</h3>
+								<h3 class="media-heading">AI for Customer Experience</h3>
 								<blockquote>
-									<p>Improve customer experience by understanding customer buying behaviors and shopping experience.</p>
+									<p>Improve customer experience by understanding customer journey and shopping experience.</p>
 									
 								</blockquote>
 							</div>
@@ -218,6 +218,100 @@
 			</div>			  
 		</section>
 		<!-- section end -->
+
+
+
+
+		<!-- section start --> 
+		<section class="section clearfix no-view secPadding" data-animation-effect="fadeIn">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h1 id="about" class="title text-center">About <span>Linc AI</span></h1>
+						<p class="lead text-center">We are a young AI start-up company that empowers our clients with data-driven solutions. </p>
+						<div class="space"></div>
+						<div class="row">
+							<div class="col-md-6">
+								<img src="images/section-image-1.png" alt="">
+								<div class="space"></div>
+							</div>
+							<div class="col-md-6">
+								<p>Use your data to create actionable insights that will improve your business decision making and autonomous operations. Our team will put actionable data and insights to work for your business.</p>
+								<p>We are specialized in Data Analytics, Data Visualization, Cloud Computing and AI Modelling.</p>
+								<ul class="list-unstyled">
+									<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Data analytics for hidden insights</li>
+									<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Data visualization for reporting and business value</li>
+									<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Cloud computing for scalable and secure solution</li>
+									<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> AI modelling for intelligent decision making</li>
+								</ul>
+							</div>
+						</div>
+						<div class="space"></div>
+						<h2>Use AI to create value within your Business</h2>
+						<div class="row">
+							<div class="col-md-6">
+								<p>AI is much more accessible for you than you think. We are already helping many small to big clients to apply AI in their day-to-day operations. For example, we are helping clients such as:</p>
+									<ul class="list-unstyled">
+									<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> A local supermarket owner who wants to increase webshop traffic</li>
+									<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> A local warehouse owner who wants to optimize inventory and minimize operation costs</li>
+									<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> A small webshop owner who wants to understand customers better to drive sales</li>
+									<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> A global snacks supplier that wants to segment stores for a targeted sales strategy</li>
+									<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> A global construction materials company that wants to harmonize suppliers to reduce costs </li>
+								</ul>
+							</div>
+							<div class="col-md-6">
+								<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+									<div class="panel panel-default">
+										<div class="panel-heading" role="tab" id="headingOne">
+											<h4 class="panel-title">
+												<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+													How we help Retail businesses
+												</a>
+											</h4>
+										</div>
+										<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+											<div class="panel-body">
+												We empower Retail businesses with intelligent advertisement, recommendation engines, price optimization, intelligent cross-selling and upselling and customer lifetime value prediction.
+											</div>
+										</div>
+									</div>
+									<div class="panel panel-default">
+										<div class="panel-heading" role="tab" id="headingTwo">
+											<h4 class="panel-title">
+												<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+													How we help Logistics businesses
+												</a>
+											</h4>
+										</div>
+										<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+											<div class="panel-body">
+												We empower Logistics businesses with inventory optimization, demand forecasting, delivery optimization and preventive maintenance.
+											</div>
+										</div>
+									</div>
+									<div class="panel panel-default">
+										<div class="panel-heading" role="tab" id="headingThree">
+											<h4 class="panel-title">
+												<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+													How we help Customer Experience
+												</a>
+											</h4>
+										</div>
+										<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+											<div class="panel-body">
+												We empower Logistics businesses with personalized marketing, customer support chatbots, customer journey analytics, customer sentiment analysis and website customization.
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- section end -->
+
 
 
 		<!-- footer start --> 
