--- a/index.html
+++ b/index.html
@@ -312,47 +312,80 @@
 		</section>
 		<!-- section end -->
 
-
-
-		<!-- footer start --> 
-		<footer id="footer">
-
-			<!-- .footer start --> 
-			<div class="footer section">
-				<div class="container">
-					<h1 class="title text-center" id="contact">Contact Us</h1>
-					<div class="space"></div>
-					<div class="row">
-			
-						<div class="footer-content">
-						
-							<div class="widget-content">
-
-								<p>Questions? Comments? Please don't hesitate to reach out. </p><br/>
-								<p class="contacts"><i class="fa fa-envelope"></i> <a href="mailto: contact.linc.ai@gmail.com">contact.linc.ai@gmail.com</a> </p>
-
-							</div>
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-3">
+						<div class="widget">
+							<h5 class="widgetheading">Our Contact</h5>
+							<address>
+							<strong>Target company Inc</strong><br>
+							JC Main Road, Near Silnile tower<br>
+							 Pin-21542 NewYork US.</address>
+							<p>
+								<i class="icon-phone"></i> (123) 456-789 - 1255-12584 <br>
+								<i class="icon-envelope-alt"></i> email@domainname.com
+							</p>
+						</div>
 					</div>
-				</div>
-			</div>
-			<!-- .footer end -->
-
-			<br><br>
-			
-			<!-- .subfooter start --> 
-			<div class="subfooter">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<p class="text-center">Copyright © 2022 by Linc AI</a>.</p>
+					<div class="col-lg-3">
+						<div class="widget">
+							<h5 class="widgetheading">Quick Links</h5>
+							<ul class="link-list">
+								<li><a href="#">Latest Events</a></li>
+								<li><a href="#">Terms and conditions</a></li>
+								<li><a href="#">Privacy policy</a></li>
+								<li><a href="#">Career</a></li>
+								<li><a href="#">Contact us</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="widget">
+							<h5 class="widgetheading">Latest posts</h5>
+							<ul class="link-list">
+								<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
+								<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
+								<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-lg-3">
+							<div class="widget">
+							<h5 class="widgetheading">Recent News</h5>
+							<ul class="link-list">
+								<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
+								<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
+								<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
+							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- .subfooter end -->
+			<div id="sub-footer">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-6">
+							<div class="copyright">
+								<p>
+									<span>&copy; Creative Bee 2015 All right reserved. By </span><a href="http://webthemez.com" target="_blank">WebThemez</a>
+								</p>
+							</div>
+						</div>
+						<div class="col-lg-6">
+							<ul class="social-network">
+								<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+								<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
+								<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			</footer>
 
-		</footer>
-		<!-- footer end -->
 
 		<!-- JavaScript --> 
 		<script type="text/javascript" src="plugins/jquery.min.js"></script>
