--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
 			<div class="footer section">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-1">
+						<div class="col-lg-6">
 							<div class="widget">
-								<h5 class="widgetheading" id="contact">Our Contact</h5>
+								<h5 class="widgetheading" id="contact" style="color:white">Our Contact</h5>
 								<address>
 								<strong>Linc AI</strong><br>
 								Sassenheim, Netherlands
@@ -330,13 +330,13 @@
 								</p>
 							</div>
 						</div>
-						<div class="col-lg-1">
+						<div class="col-lg-6">
 							<div class="widget">
-								<h5 class="widgetheading">Quick Links</h5>
+								<h5 class="widgetheading" style="color:white">Quick Links</h5>
 								<ul class="link-list">
-									<li><a href="terms.html">Terms and conditions</a></li>
-									<li><a href="cookie.html">Cookie policy</a></li>
-									<li><a href="privacy.html">Privacy policy</a></li>
+									<li><a href="terms-and-conditions.html">Terms and conditions</a></li>
+									<li><a href="cookie-policy.html">Cookie policy</a></li>
+									<li><a href="privacy-policy.html">Privacy policy</a></li>
 								</ul>
 							</div>
 						</div>
