Updated all policies using Termsfeed

--- a/index.html
+++ b/index.html
@@ -315,11 +315,11 @@
 		<!-- .footer start --> 
 		<footer id="footer">
 			<div class="footer section">
-				<div class="container">
+				<div class="container" id="contact">
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="widget">
-								<h5 class="widgetheading" id="contact" style="color:white">Our Contact</h5>
+								<h5 class="widgetheading" style="color:white">Our Contact</h5>
 								<address>
 								<strong>Linc AI</strong><br>
 								Sassenheim, Netherlands
