--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -1,149 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
-        .js_enabled #cookie-message {
-            display: none;
-        }
-        body {
-            margin: 0;
-            font-family: sans-serif;
-        }
-        #content {
-            margin: 1em;
-        }
-        #cookie-message {
-            background-color: #d5e6ed;
-            color: #662d91;
-            margin: 0 auto;
-            padding: 1em;
-        }
-
-        table {
-            border-collapse: collapse;
-        }
-
-        table thead tr {
-            border-bottom: 1px solid #444;
-        }
-
-        table tbody tr {
-            border-bottom: 1px solid #777;
-        }
-
-        table tbody tr:nth-last-child(1) {
-            border: none;
-        }
-
-        table thead th {
-            text-align: left;
-            font-weight: bold;
-        }
-
-        table th:nth-child(1) {
-            min-width: 7rem;
-        }
-
-        table th {
-            padding: 0.8rem 0.8rem 0.4rem 0;
-            vertical-align: top;
-        }
-
-        table td {
-            padding: 0.8rem 0.8rem 0.8rem 0;
-            vertical-align: top;
-        }
-
-        table + h3 {
-            margin-top: 1.25rem;
-        }
-
-    </style>
-</head>
-<body>
-<script>
-    // Detect JS support
-    document.body.className = document.body.className + " js_enabled";
-</script>
-
-<div id="cookie-message" data-cookie-expiry="60">
-    <p>
-        [Site name] uses cookies to ensure we give you the best experience on our website.
-        <a href="cookie-policy.html" title="View our Cookie Policy">Find out more about cookies</a>
-    </p>
-</div>
-
-<div id="content">
-
-<h1>Cookie Policy</h1>
-
-<h2>Cookies</h2>
-
-<p>A cookie is a small text file which is automatically saved on your computer when you visit our website and is used to
-    help track activity across a website. [WEBSITE NAME] uses cookies on our website for the following purposes:</p>
-
-<h3>Google Analytics</h3>
-
-<p>We use Google Analytics to help provide anonymous web analytics for our website.</p>
-
-<table border="0">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Expiration</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>_ga</td>
-        <td>Used to distinguish users</td>
-        <td>2 years</td>
-    </tr>
-    <tr>
-        <td>_gat</td>
-        <td>Used to throttle request rate</td>
-        <td>30 minutes</td>
-    </tr>
-    </tbody>
-</table>
-
-<h3>Website</h3>
-
-<p>We use cookies to help increase the user experience of this website.</p>
-
-<table border="0">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Expiration</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>seen-cookie-message</td>
-        <td>Used to indicate you have seen the cookie message</td>
-        <td>30 days</td>
-    </tr>
-    </tbody>
-</table>
-
-<h2>Removing cookies</h2>
-<p>If you have any concerns about cookies, or want to remove cookies from your computer, please visit <a href="http://www.allaboutcookies.org/">All About Cookies</a> which explains how to do this.</p>
-
-<h2>Collection of personal information</h2>
-
-<p>If you contact us via a form on our website your personal information will only be used for us to contact you.
-    No personal data you send us will be disclosed to a third party without your permission.</p>
-
-<p>If you wish us to remove any personal details we hold about you, please email us at <a href="mailto:[EMAIL ADDRESS]">[EMAIL ADDRESS]</a></p>
-
-
-</div>
-<script src="cookie-message.js"></script>
-
-</body>
-</html>
+<h1>Cookies Policy</h1>
+<p>Last updated: March 05, 2022</p>
+<p>This Cookies Policy explains what Cookies are and how We use them. You should read this policy so You can understand what type of cookies We use, or the information We collect using Cookies and how that information is used. This Cookies Policy has been created with the help of the <a href="https://www.termsfeed.com/cookies-policy-generator/" target="_blank">Cookies Policy Generator</a>.</p>
+<p>Cookies do not typically contain any information that personally identifies a user, but personal information that we store about You may be linked to the information stored in and obtained from Cookies. For further information on how We use, store and keep your personal data secure, see our Privacy Policy.</p>
+<p>We do not store sensitive personal information, such as mailing addresses, account passwords, etc. in the Cookies We use.</p>
+<h1>Interpretation and Definitions</h1>
+<h2>Interpretation</h2>
+<p>The words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.</p>
+<h2>Definitions</h2>
+<p>For the purposes of this Cookies Policy:</p>
+<ul>
+<li><strong>Company</strong> (referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Cookies Policy) refers to Linc AI.</li>
+<li><strong>Cookies</strong> means small files that are placed on Your computer, mobile device or any other device by a website, containing details of your browsing history on that website among its many uses.</li>
+<li><strong>Website</strong> refers to Linc AI, accessible from <a href="https://linc-ai.github.io/" rel="external nofollow noopener" target="_blank">https://linc-ai.github.io/</a></li>
+<li><strong>You</strong> means the individual accessing or using the Website, or a company, or any legal entity on behalf of which such individual is accessing or using the Website, as applicable.</li>
+</ul>
+<h1>The use of the Cookies</h1>
+<h2>Type of Cookies We Use</h2>
+<p>Cookies can be &quot;Persistent&quot; or &quot;Session&quot; Cookies. Persistent Cookies remain on your personal computer or mobile device when You go offline, while Session Cookies are deleted as soon as You close your web browser.</p>
+<p>We use both session and persistent Cookies for the purposes set out below:</p>
+<ul>
+<li>
+<p><strong>Necessary / Essential Cookies</strong></p>
+<p>Type: Session Cookies</p>
+<p>Administered by: Us</p>
+<p>Purpose: These Cookies are essential to provide You with services available through the Website and to enable You to use some of its features. They help to authenticate users and prevent fraudulent use of user accounts. Without these Cookies, the services that You have asked for cannot be provided, and We only use these Cookies to provide You with those services.</p>
+</li>
+<li>
+<p><strong>Functionality Cookies</strong></p>
+<p>Type: Persistent Cookies</p>
+<p>Administered by: Us</p>
+<p>Purpose: These Cookies allow us to remember choices You make when You use the Website, such as remembering your login details or language preference. The purpose of these Cookies is to provide You with a more personal experience and to avoid You having to re-enter your preferences every time You use the Website.</p>
+</li>
+</ul>
+<h2>Your Choices Regarding Cookies</h2>
+<p>If You prefer to avoid the use of Cookies on the Website, first You must disable the use of Cookies in your browser and then delete the Cookies saved in your browser associated with this website. You may use this option for preventing the use of Cookies at any time.</p>
+<p>If You do not accept Our Cookies, You may experience some inconvenience in your use of the Website and some features may not function properly.</p>
+<p>If You'd like to delete Cookies or instruct your web browser to delete or refuse Cookies, please visit the help pages of your web browser.</p>
+<ul>
+<li>
+<p>For the Chrome web browser, please visit this page from Google: <a href="https://support.google.com/accounts/answer/32050" rel="external nofollow noopener" target="_blank">https://support.google.com/accounts/answer/32050</a></p>
+</li>
+<li>
+<p>For the Internet Explorer web browser, please visit this page from Microsoft: <a href="http://support.microsoft.com/kb/278835" rel="external nofollow noopener" target="_blank">http://support.microsoft.com/kb/278835</a></p>
+</li>
+<li>
+<p>For the Firefox web browser, please visit this page from Mozilla: <a href="https://support.mozilla.org/en-US/kb/delete-cookies-remove-info-websites-stored" rel="external nofollow noopener" target="_blank">https://support.mozilla.org/en-US/kb/delete-cookies-remove-info-websites-stored</a></p>
+</li>
+<li>
+<p>For the Safari web browser, please visit this page from Apple: <a href="https://support.apple.com/guide/safari/manage-cookies-and-website-data-sfri11471/mac" rel="external nofollow noopener" target="_blank">https://support.apple.com/guide/safari/manage-cookies-and-website-data-sfri11471/mac</a></p>
+</li>
+</ul>
+<p>For any other web browser, please visit your web browser's official web pages.</p>
+<h2>More Information about Cookies</h2>
+<p>You can learn more about cookies here: <a href="https://www.termsfeed.com/blog/cookies/" target="_blank">All About Cookies by TermsFeed</a>.</p>
+<h2>Contact Us</h2>
+<p>If you have any questions about this Cookies Policy, You can contact us:</p>
+<ul>
+<li>By email: contact.linc.ai@gmail.com</li>
+</ul>
