changed the policy link colors

--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
 							<div class="widget">
 								<h5 class="widgetheading" style="color:white">Quick Links</h5>
 								<ul class="link-list">
-									<li><a href="terms-and-conditions.html">Terms and conditions</a></li>
-									<li><a href="cookie-policy.html">Cookie policy</a></li>
-									<li><a href="privacy-policy.html">Privacy policy</a></li>
+									<li><a href="terms-and-conditions.html" style="color:grey;">Terms and conditions</a></li>
+									<li><a href="cookie-policy.html" style="color:grey;">Cookie policy</a></li>
+									<li><a href="privacy-policy.html" style="color:grey;">Privacy policy</a></li>
 								</ul>
 							</div>
 						</div>
